Bug 1073928 - IonMonkey: Represent negative zero explicitly in range analysis r=nbp,h4writer